Supported collecting statistics about user games
