# swagger.json
@@ -29,8 +29,8 @@
       "description": "Feed feature set"
     },
     {
-      "name": "OAuth",
-      "description": "OAuth feature set"
+      "name": "User",
+      "description": "User feature set"
     },
     {
       "name": "Location",
@@ -1031,7 +1031,7 @@
     "/token/get": {
       "post": {
         "tags": [
-          "OAuth"
+          "User"
         ],
         "summary": "Return access token by code",
         "description": "Make request for getting token and return result",
@@ -1066,7 +1066,7 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/OAuth"
+              "$ref": "#/definitions/User"
             }
           },
           "400": {
@@ -1083,7 +1083,7 @@
     "/token/info": {
       "get": {
         "tags": [
-          "OAuth"
+          "User"
         ],
         "summary": "Return information about access token",
         "description": "Make request for getting information about token and return result",
@@ -1105,13 +1105,20 @@
             "description": "The type of the client app",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "expansion",
+            "in": "query",
+            "description": "Expansion information",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "responses": {
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/OAuth"
+              "$ref": "#/definitions/User"
             }
           },
           "400": {
@@ -1128,7 +1135,7 @@
     "/token/revoke": {
       "post": {
         "tags": [
-          "OAuth"
+          "User"
         ],
         "summary": "Revoke access token",
         "description": "Revoke access token from both databases",
@@ -1146,7 +1153,21 @@
             "description": "Current access token for token revoking request",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/OAuthRevoke"
+              "type": "object",
+              "required": [
+                "access_token",
+                "type"
+              ],
+              "properties": {
+                "access_token": {
+                  "type": "string",
+                  "example": "ncr74RlkjTYFfyuGUjlkJO56J0"
+                },
+                "type": {
+                  "type": "string",
+                  "example": "each"
+                }
+              }
             }
           }
         ],
@@ -1154,7 +1175,64 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/OAuth"
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Invalid parameters supplied"
+          }
+        },
+        "security": [
+          {
+            "auth_env": []
+          }
+        ]
+      }
+    },
+    "/update_statistic": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Update statistic of user",
+        "description": "Update process of user for given game",
+        "operationId": "updateStatistic",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "statistic_info",
+            "in": "body",
+            "description": "Process of game",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "game_id",
+                "step_passed"
+              ],
+              "properties": {
+                "game_id": {
+                  "type": "integer",
+                  "format": "int64"
+                },
+                "step_passed": {
+                  "type": "int",
+                  "example": 0
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/User"
             }
           },
           "400": {
@@ -1622,7 +1700,7 @@
         }
       }
     },
-    "OAuth": {
+    "User": {
       "type": "object",
       "required": [
         "access_token",
@@ -1657,6 +1735,47 @@
           "type": "string",
           "example": "http://api.com/image.format"
         },
+        "run": {
+          "type": "object",
+          "properties": {
+            "games_passed": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "game": {
+                    "type": "object",
+                    "$ref": "#/definitions/Game"
+                  },
+                  "best_time": {
+                    "type": "string",
+                    "example": "1w 2d 3h 4m 5s"
+                  }
+                }
+              }
+            },
+            "games_process": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "game": {
+                    "type": "object",
+                    "$ref": "#/definitions/Game"
+                  }
+                }
+              }
+            },
+            "bonus": {
+              "type": "integer",
+              "example": 50
+            }
+          }
+        },
+        "time_in_game": {
+          "type": "string",
+          "example": "1y 2m 3w 4d 5h 6m 7s"
+        },
         "created": {
           "type": "string",
           "example": "2018-03-28 20:24:00+00:00"
@@ -1664,23 +1783,6 @@
         "updated": {
           "type": "string",
           "example": "2018-03-28 20:24:00+00:00"
-        }
-      }
-    },
-    "OAuthRevoke": {
-      "type": "object",
-      "required": [
-        "access_token",
-        "type"
-      ],
-      "properties": {
-        "access_token": {
-          "type": "string",
-          "example": "ncr74RlkjTYFfyuGUjlkJO56J0"
-        },
-        "type": {
-          "type": "string",
-          "example": "each"
         }
       }
     },
